test/parser/top_level.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:1: error: expected function, struct, err, module or import declaration on the top level
while 0 {}
